	    don't use in_array(), but pql_check_attribute().

	API changes
	Schema changes:
	  - Added autoCreatePassWord (OID: 1.3.6.1.4.1.8767.3.2.1.16) for auto password
	    generation. To get it just after 'autoCreateMailAddress', the 'useWebSrv'
	    attribute was renumbered (+1 in OID number).

phpQLAdmin 2.0.18d TO BE ANNOUNCED
	Bug fixes
	GUI layout change
	Misc changes	

phpQLAdmin 2.0.18c (May  5 2004)
	Bug fixes
	  - Add uidNumber, gidNumber and homeDirectory to a mail account IF we've
	    choosen to use 'posixAccount' when creating user(s).
	  - De-globalize the root DN in call to user_detail.php from user_details-forwards_from.inc.
	  - The 'attribute key' used for 'attribute independence' _must_ be lowercase
	    to work as a variable later.
	  - PQL_CONF_ to PQL_ATTR_ spelling error fixed.
	  - Attribute spelling error fixed in tables/user_details-basic.inc
	    ('ugidnumber' should be 'uidnumber').
	  - Predefine (empty) variables to get rid of errors.
	  - Correctly process the next page/form to display in user_add.php. This depend
	    largely on if we have an MX error or not.
	  - Don't set 'host' to 'default' (in tables/user_add-details.inc) if we're not
	    running in advanced mode. The host value will be figured out automaticly
	    (in user_add.php)...
	  - Rewrite the part that adds {User,Group}ID slightly. We use the
	    PQL_CONF_FORWARDINGACCOUNT_UIDNUMBER value if it's a mail account, and
	    generate a new value using pql_get_next_ugidnumber() if not.
	  - The 'userhost' value which is/was generated by user_add.php might be
	    an array containing the DNS entry and/or the QLC object(s). The DNS value
	    is by default used, othervise the first QLC object.
	  - If a define isn't set, the pql_get_define() will return an empty array with
	    all rootdn's. Catch this, and return NULL if the define is unset.
	  - To make sure we don't get 'Wrong datatype' in tables/user_add-additional.inc