@@ -6,9 +6,10 @@ phpqladmin (2.0.19-1) unstable; urgency=low
 
 phpqladmin (2.0.18d-1) unstable; urgency=low
 
-  * 
+  * De-globalize the 'reload left frame' value so that the reloading can
+    acctually happen!
 
- -- Turbo Fredriksson <turbo@debian.org>  Thu,  6 May 2004 06:55:13 +0200
+ -- Turbo Fredriksson <turbo@debian.org>  Thu,  6 May 2004 07:14:02 +0200
 
 phpqladmin (2.0.18c-1) unstable; urgency=low
 
