@@ -41,6 +41,9 @@ phpQLAdmin 2.0.19 TO BE ANNOUNCED
 
 phpQLAdmin 2.0.18d TO BE ANNOUNCED
 	Bug fixes
+	  - De-globalize the 'reload left frame' value so that the reloading can acctually
+	    happen! Closes bug 182
+
 	GUI layout change
 	Misc changes	
 
